--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,15 @@
         android:theme="@style/Theme.CryptoApp"
         tools:targetApi="31">
         <activity
+            android:name=".CoinDetailsActivity"
+            android:exported="false" />
+        <activity
             android:name=".CoinPriceListActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.CryptoApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
